# ALIKE-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: alike.hpp  args.hxx  get_patches.h  image_loader.hpp  simple_padder.hpp  simple_tracker.hpp  soft_detect.hpp  utils.h
models/: alike-l.pt  alike-n.pt  alike-s.pt  alike-t.pt
src/: get_patches.cpp  get_patches.cu  main.cpp  utils.cpp
